# psvg

./: Cargo.toml  iconList.json
.github/workflows/: release.yaml
src/: download.rs  lib.rs  main.rs
